Deploy lại - ghi đè hoàn toàn

--- a/layouts/_default/main.html
+++ b/layouts/_default/main.html
@@ -12,7 +12,7 @@
         <div class="projects-grid">
             <article class="project-card">
                 <div class="project-image">
-                <img src="./images/profile.png" alt="Student Management System" class="project-img">
+                <img src="../images/pj2.png" alt="Student Management System" class="project-img" style="width: 1200px; height: auto;">
                 <h3 class="project-title">Student Management System</h3>
                 <span class="project-tech">Công nghệ: .NET Framework, C#, SQL Server</span>
                 
